Added pdf extractions endpoint, some additional changes to include TA1 unified API.

--- a/api.env.sample
+++ b/api.env.sample
@@ -1,4 +1,6 @@
 REDIS_HOST=redis
 REDIS_PORT=6379
 TDS_URL=http://data-service-api:8000
-SKEMA_URL=http://skema-rs:8080
+SKEMA_RS_URL=http://skema-rs:8080
+TA1_UNIFIED_URL=http://skema-unified:8000
+INTEGRATED_TR_URL=http://integrated-tr:7778
