--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,18 @@ packages = [{include = "extraction_service"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.100.0"
 redis = "^4.6.0"
 rq = "^1.15.1"
 pydantic = "^2.0.2"
-uvicorn = "^0.22.0"
+idna = "^3.4"
+python-multipart = "^0.0.6"
 
-# TODO Split uvicorn, fastapi out into api only
+uvicorn = { version = "^0.22.0", optional = true }
+fastapi = { version = "^0.100.0", optional = true }
+pypdf = { version = "^3.12.0", optional = true }
 
+[tool.poetry.extras]
+api = ["uvicorn", "fastapi", "pypdf"]
 
 [build-system]
 requires = ["poetry-core"]
