--- a/api.env.sample
+++ b/api.env.sample
@@ -4,3 +4,4 @@ TDS_URL=http://data-service-api:8000
 SKEMA_RS_URL=http://skema-rs:8080
 TA1_UNIFIED_URL=http://skema-unified:8000
 INTEGRATED_TR_URL=http://integrated-tr:7778
+MIT_TR_URL=http://mit-tr:8000
