--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Powell Fendley"]
 readme = "README.md"
 packages = [{include = "extraction_service"}]
 
+
+
 [tool.poetry.dependencies]
 python = "^3.9"
 redis = "^4.6.0"
@@ -17,9 +19,10 @@ python-multipart = "^0.0.6"
 uvicorn = { version = "^0.22.0", optional = true }
 fastapi = { version = "^0.100.0", optional = true }
 pypdf = { version = "^3.12.0", optional = true }
+pandas = { version = "^2.0.3", optional = true }
 
 [tool.poetry.extras]
-api = ["uvicorn", "fastapi", "pypdf"]
+api = ["uvicorn", "fastapi", "pypdf", "pandas"]
 
 [build-system]
 requires = ["poetry-core"]
