--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,12 @@ rq = "^1.15.1"
 pydantic = "^2.0.2"
 idna = "^3.4"
 python-multipart = "^0.0.6"
+pandas = "^2.0.3"
 
 uvicorn = { version = "^0.22.0", optional = true }
 fastapi = { version = "^0.100.0", optional = true }
 pypdf = { version = "^3.12.0", optional = true }
-pandas = { version = "^2.0.3", optional = true }
+
 
 [tool.poetry.extras]
 api = ["uvicorn", "fastapi", "pypdf", "pandas"]
