Added requested changes for renaming, added amr_linking endpoint, changes to pdf extractions endpoint.

--- a/api.env.sample
+++ b/api.env.sample
@@ -1,7 +1,6 @@
 REDIS_HOST=redis
 REDIS_PORT=6379
-TDS_URL=http://data-service-api:8000
-SKEMA_RS_URL=http://skema-rs:8080
-TA1_UNIFIED_URL=http://skema-unified:8000
-INTEGRATED_TR_URL=http://integrated-tr:7778
-MIT_TR_URL=http://mit-tr:8000
+TDS_URL=http://data-service.staging.terarium.ai
+SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
+TA1_UNIFIED_URL=http://skema-unified.staging.terarium.ai
+MIT_TR_URL=http://mit-tr.staging.terarium.ai
