--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -39,59 +39,60 @@ services:
       - redis
     networks:
       - ta1-extraction-service
-  mit-tr:
-    extends:
-      file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-      service: mit-tr
-    networks:
-      - ta1-extraction-service
-  skema-tr:
-    extends:
-      file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-      service: skema-tr
-    networks:
-      - ta1-extraction-service
-  integrated-tr:
-    extends:
-      file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-      service: integrated-tr
-    networks:
-      - ta1-extraction-service
-  skema-py:
-    extends:
-      file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-      service: skema-py
-    networks:
-      - ta1-extraction-service
-  skema-rs:
-    extends:
-      # Changed to port 8085
-      file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-      service: skema-rs
-    networks:
-      - ta1-extraction-service
-  graphdb:
-    extends:
-      # Changed to port 7688
-      file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-      service: graphdb
-    networks:
-      - ta1-extraction-service
-  eq2mml:
-    extends:
-      # Changed to port 8011
-      file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-      service: eq2mml
-    networks:
-      - ta1-extraction-service
-  mathjax:
-    extends:
-      file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-      service: mathjax
-    networks:
-      - ta1-extraction-service
 
 volumes:
   mg_lib:
   mg_log:
   mg_etc:
+
+    #  mit-tr:
+    #     extends:
+    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
+    #       service: mit-tr
+    #     networks:
+    #       - ta1-extraction-service
+    #   skema-tr:
+    #     extends:
+    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
+    #       service: skema-tr
+    #     networks:
+    #       - ta1-extraction-service
+    #   integrated-tr:
+    #     extends:
+    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
+    #       service: integrated-tr
+    #     networks:
+    #       - ta1-extraction-service
+    #   skema-py:
+    #     extends:
+    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
+    #       service: skema-py
+    #     networks:
+    #       - ta1-extraction-service
+    #   skema-rs:
+    #     extends:
+    #       # Changed to port 8085
+    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
+    #       service: skema-rs
+    #     networks:
+    #       - ta1-extraction-service
+    #   graphdb:
+    #     extends:
+    #       # Changed to port 7688
+    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
+    #       service: graphdb
+    #     networks:
+    #       - ta1-extraction-service
+    #   eq2mml:
+    #     extends:
+    #       # Changed to port 8011
+    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
+    #       service: eq2mml
+    #     networks:
+    #       - ta1-extraction-service
+    #   mathjax:
+    #     extends:
+    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
+    #       service: mathjax
+    #     networks:
+    #       - ta1-extraction-service
