finalized model card and updated docker-compose to have a different container name for the extraction rest container to avoid conflict with TDS

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ networks:
   data-api:
     external: true
 services:
-  api:
+  extraction-api:
     container_name: api-ta1-extraction-service
     build:
       context: ./
