added `LOG_LEVEL` to `api.env`

--- a/api.env.sample
+++ b/api.env.sample
@@ -4,3 +4,4 @@ TDS_URL=http://data-service.staging.terarium.ai
 SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
 TA1_UNIFIED_URL=http://skema-unified.staging.terarium.ai
 MIT_TR_URL=http://mit-tr.staging.terarium.ai
+LOG_LEVEL=INFO
