--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -11,13 +11,13 @@ FROM python:3.10
 COPY --from=tmp / /
 
 WORKDIR /
-RUN pip install --no-cache-dir poetry==1.5.1
+RUN pip install --no-cache-dir poetry==1.5.1 pytest
 RUN poetry config virtualenvs.create false && \
     poetry install --no-root --no-cache --extras api
 
 COPY api extraction-service/api
+COPY tests extraction-service/tests
 WORKDIR /extraction-service
 
-EXPOSE 8000
 ENV PYTHONPATH=/extraction-service/api
-CMD [ "uvicorn", "server:app", "--reload", "--host", "0.0.0.0", "--port", "8000" ]
+CMD [ "pytest", "tests/tests.py" ]
