--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["Powell Fendley"]
 readme = "README.md"
-packages = [{include = "extraction_service"}]
-
-
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -20,6 +17,10 @@ pandas = "^2.0.3"
 uvicorn = { version = "^0.22.0", optional = true }
 fastapi = { version = "^0.100.0", optional = true }
 pypdf = { version = "^3.12.0", optional = true }
+pytest = "^7.4.0"
+httpx = "^0.24.1"
+requests = "^2.31.0"
+fakeredis = "^2.17.0"
 
 
 [tool.poetry.extras]
