--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,12 @@ uvicorn = { version = "^0.22.0", optional = true }
 fastapi = { version = "^0.100.0", optional = true }
 pypdf = { version = "^3.12.0", optional = true }
 pytest = "^7.4.0"
-httpx = "^0.24.1"
+httpx = "0.23.3"
 requests = "^2.31.0"
 fakeredis = "^2.17.0"
 pytest-cov = "^4.1.0"
+pact-python = "^2.0.1"
+jsonschema = "^4.19.0"
 
 
 [tool.poetry.extras]
