--- a/.github/workflows/pytest_workflow.yml
+++ b/.github/workflows/pytest_workflow.yml
@@ -9,7 +9,7 @@ on:
       - codecov
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -44,4 +44,5 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage
         fail_ci_if_error: true  # Set to true if CI should fail when codecov fails
