--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,11 +1,11 @@
 version: "3.9"
 networks:
-  ta1-extraction-service:
+  ta1-service:
     driver: bridge
-    name: ta1-extraction-service
+    name: ta1-service
 services:
   api:
-    container_name: api-ta1-extraction-service
+    container_name: api-ta1-service
     build:
       context: ./
       dockerfile: api/Dockerfile
@@ -14,7 +14,7 @@ services:
     env_file:
       - api.env
     networks:
-      - ta1-extraction-service
+      - ta1-service
     depends_on:
       - redis
     volumes:
@@ -22,14 +22,14 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
   redis:
-    container_name: redis-ta1-extraction-service
+    container_name: redis-ta1-service
     image: redis
     ports:
       - "6379:6379"
     networks:
-      - ta1-extraction-service
+      - ta1-service
   rqworker:
-    container_name: worker-ta1-extraction-service
+    container_name: worker-ta1-service
     build:
       context: ./
       dockerfile: workers/Dockerfile
@@ -38,61 +38,4 @@ services:
     depends_on:
       - redis
     networks:
-      - ta1-extraction-service
-
-volumes:
-  mg_lib:
-  mg_log:
-  mg_etc:
-
-    #  mit-tr:
-    #     extends:
-    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-    #       service: mit-tr
-    #     networks:
-    #       - ta1-extraction-service
-    #   skema-tr:
-    #     extends:
-    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-    #       service: skema-tr
-    #     networks:
-    #       - ta1-extraction-service
-    #   integrated-tr:
-    #     extends:
-    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-    #       service: integrated-tr
-    #     networks:
-    #       - ta1-extraction-service
-    #   skema-py:
-    #     extends:
-    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-    #       service: skema-py
-    #     networks:
-    #       - ta1-extraction-service
-    #   skema-rs:
-    #     extends:
-    #       # Changed to port 8085
-    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-    #       service: skema-rs
-    #     networks:
-    #       - ta1-extraction-service
-    #   graphdb:
-    #     extends:
-    #       # Changed to port 7688
-    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-    #       service: graphdb
-    #     networks:
-    #       - ta1-extraction-service
-    #   eq2mml:
-    #     extends:
-    #       # Changed to port 8011
-    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-    #       service: eq2mml
-    #     networks:
-    #       - ta1-extraction-service
-    #   mathjax:
-    #     extends:
-    #       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
-    #       service: mathjax
-    #     networks:
-    #       - ta1-extraction-service
+      - ta1-service
