--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: "3.9"
 networks:
-  ta1-extraction-service:
+  ta1-service:
     driver: bridge
-    name: ta1-extraction-service
+    name: ta1-service
   data-api:
     external: true
 services:
   extraction-api:
-    container_name: api-ta1-extraction-service
+    container_name: api-ta1-service
     build:
       context: ./
       dockerfile: api/Dockerfile
@@ -16,23 +16,23 @@ services:
     env_file:
       - api.env
     networks:
-      - ta1-extraction-service
+      - ta1-service
       - data-api
     depends_on:
       - redis
     volumes:
-      - $PWD/api:/extraction-service/api
+      - $PWD/api:/service/api
     extra_hosts:
       - "host.docker.internal:host-gateway"
   redis:
-    container_name: redis-ta1-extraction-service
+    container_name: redis-ta1-service
     image: redis
     ports:
       - "6379:6379"
     networks:
-      - ta1-extraction-service
+      - ta1-service
   rqworker:
-    container_name: worker-ta1-extraction-service
+    container_name: worker-ta1-service
     build:
       context: ./
       dockerfile: workers/Dockerfile
@@ -41,26 +41,26 @@ services:
     depends_on:
       - redis
     networks:
-      - ta1-extraction-service
+      - ta1-service
       - data-api
   mit-tr:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: mit-tr
     networks:
-      - ta1-extraction-service
+      - ta1-service
   skema-tr:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: skema-tr
     networks:
-      - ta1-extraction-service
+      - ta1-service
   skema-py:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: skema-py
     networks:
-      - ta1-extraction-service
+      - ta1-service
   skema-unified:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
@@ -70,25 +70,25 @@ services:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: skema-rs
     networks:
-      - ta1-extraction-service
+      - ta1-service
   graphdb:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: graphdb
     networks:
-      - ta1-extraction-service
+      - ta1-service
   eq2mml:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: eq2mml
     networks:
-      - ta1-extraction-service
+      - ta1-service
   mathjax:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: mathjax
     networks:
-      - ta1-extraction-service
+      - ta1-service
 
 volumes:
   mg_lib:
