--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ fakeredis = "^2.17.0"
 pytest-cov = "^4.1.0"
 pact-python = "^2.0.1"
 jsonschema = "^4.19.0"
+yamllint = "^1.32.0"
 
 
 [tool.poetry.extras]
