--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -13,7 +13,7 @@ services:
     ports:
       - "8010:8000"
     env_file:
-      - api.env
+      - .env
     networks:
       - ta1-service
     depends_on:
@@ -35,7 +35,7 @@ services:
       context: ./
       dockerfile: workers/Dockerfile
     env_file:
-      - api.env
+      - .env
     depends_on:
       - redis
     networks:
