--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,22 +13,25 @@ pydantic = "^2.0.2"
 idna = "^3.4"
 python-multipart = "^0.0.6"
 pandas = "^2.0.3"
+requests = "^2.31.0"
 
 uvicorn = { version = "^0.22.0", optional = true }
 fastapi = { version = "^0.100.0", optional = true }
 pypdf = { version = "^3.12.0", optional = true }
-pytest = "^7.4.0"
-httpx = "0.23.3"
-requests = "^2.31.0"
-fakeredis = "^2.17.0"
-pytest-cov = "^4.1.0"
-pact-python = "^2.0.1"
-jsonschema = "^4.19.0"
-yamllint = "^1.32.0"
+pydantic-settings = "^2.0.3"
+
 
 
 [tool.poetry.extras]
 api = ["uvicorn", "fastapi", "pypdf", "pandas"]
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+httpx = "^0.24.1"
+fakeredis = "^2.18.0"
+pytest-cov = "^4.1.0"
+jsonschema = "^4.19.0"
+yamllint = "^1.32.0"
 
 [build-system]
 requires = ["poetry-core"]
