--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Powell Fendley"]
 readme = "README.md"
+packages = [{include = "lib"}, {include = "worker"}, {include = "api"}, {include = "tests"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -13,22 +14,30 @@ pydantic = "^2.0.2"
 idna = "^3.4"
 python-multipart = "^0.0.6"
 pandas = "^2.0.3"
-
-uvicorn = { version = "^0.22.0", optional = true }
-fastapi = { version = "^0.100.0", optional = true }
-pypdf = { version = "^3.12.0", optional = true }
-pytest = "^7.4.0"
-httpx = "0.23.3"
 requests = "^2.31.0"
-fakeredis = "^2.17.0"
+pydantic-settings = "^2.0.3"
+
+
+[tool.poetry.group.api]
+optional = true
+
+[tool.poetry.group.api.dependencies]
+uvicorn = "^0.22.0"
+fastapi = "^0.100.0"
+pypdf = "^3.12.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+httpx = "^0.24.1"
+fakeredis = "^2.18.0"
 pytest-cov = "^4.1.0"
-pact-python = "^2.0.1"
 jsonschema = "^4.19.0"
 yamllint = "^1.32.0"
+poethepoet = "^0.22.0"
+requests-mock = "^1.11.0"
 
-
-[tool.poetry.extras]
-api = ["uvicorn", "fastapi", "pypdf", "pandas"]
+[tool.pytest.ini_options]
+markers = ["resource"]
 
 [build-system]
 requires = ["poetry-core"]
