--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -33,7 +33,7 @@ services:
     container_name: worker-ta1-service
     build:
       context: ./
-      dockerfile: workers/Dockerfile
+      dockerfile: worker/Dockerfile
     env_file:
       - .env
     depends_on:
