--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ jsonschema = "^4.19.0"
 yamllint = "^1.32.0"
 poethepoet = "^0.22.0"
 requests-mock = "^1.11.0"
+pyyaml = "^6.0.1"
 
 [tool.pytest.ini_options]
 markers = ["resource"]
