--- a/env.sample
+++ b/env.sample
@@ -5,3 +5,4 @@ SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
 TA1_UNIFIED_URL=http://skema-unified.staging.terarium.ai
 MIT_TR_URL=http://mit-tr.staging.terarium.ai
 LOG_LEVEL=INFO
+MOCK_TA1=True
