--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ yamllint = "^1.32.0"
 poethepoet = "^0.22.0"
 requests-mock = "^1.11.0"
 pyyaml = "^6.0.1"
+pre-commit = "^3.3.3"
 
 [tool.pytest.ini_options]
 markers = ["resource"]
