--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
 ---
 version: "3.9"
 networks:
-  ta1-service:
+  knowledge-middleware:
     driver: bridge
-    name: ta1-service
+    name: knowledge-middleware
   data-api:
     external: true
 services:
   extraction-api:
-    container_name: api-ta1-service
+    container_name: api-knowledge-middleware
     build:
       context: ./
       dockerfile: api/Dockerfile
@@ -17,7 +17,7 @@ services:
     env_file:
       - .env
     networks:
-      - ta1-service
+      - knowledge-middleware
       - data-api
     depends_on:
       - redis
@@ -26,14 +26,14 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
   redis:
-    container_name: redis-ta1-service
+    container_name: redis-knowledge-middleware
     image: redis
     ports:
       - "6379:6379"
     networks:
-      - ta1-service
+      - knowledge-middleware
   rqworker:
-    container_name: worker-ta1-service
+    container_name: worker-knowledge-middleware
     build:
       context: ./
       dockerfile: worker/Dockerfile
@@ -42,26 +42,26 @@ services:
     depends_on:
       - redis
     networks:
-      - ta1-service
+      - knowledge-middleware
       - data-api
   mit-tr:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: mit-tr
     networks:
-      - ta1-service
+      - knowledge-middleware
   skema-tr:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: skema-tr
     networks:
-      - ta1-service
+      - knowledge-middleware
   skema-py:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: skema-py
     networks:
-      - ta1-service
+      - knowledge-middleware
   skema-unified:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
@@ -71,25 +71,25 @@ services:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: skema-rs
     networks:
-      - ta1-service
+      - knowledge-middleware
   graphdb:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: graphdb
     networks:
-      - ta1-service
+      - knowledge-middleware
   eq2mml:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: eq2mml
     networks:
-      - ta1-service
+      - knowledge-middleware
   mathjax:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: mathjax
     networks:
-      - ta1-service
+      - knowledge-middleware
 
 volumes:
   mg_lib:
