--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,11 @@ poethepoet = "^0.22.0"
 requests-mock = "^1.11.0"
 pyyaml = "^6.0.1"
 pre-commit = "^3.3.3"
+pytest-json-report = "^1.5.0"
 
 [tool.pytest.ini_options]
 markers = ["resource"]
+python_files = ["tests/test_e2e.py"]
 
 [build-system]
 requires = ["poetry-core"]
