--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,10 @@ pyyaml = "^6.0.1"
 pre-commit = "^3.3.3"
 pytest-json-report = "^1.5.0"
 
+
+[tool.poetry.scripts]
+report = "tests.report:report"
+
 [tool.pytest.ini_options]
 markers = ["resource"]
 python_files = ["tests/test_e2e.py"]
