--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,12 @@ pytest-json-report = "^1.5.0"
 
 
 [tool.poetry.scripts]
-report = "tests.report:report"
+gen-report = "tests.report:report"
+
+[tool.poe.tasks]
+_test = "pytest --json-report --json-report-file=tests/output/tests.json"
+_report = "gen-report"
+report = ["_test", "_report"]
 
 [tool.pytest.ini_options]
 markers = ["resource"]
