--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "lib"}, {include = "worker"}, {include = "api"}, {include = "tests"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 redis = "^4.6.0"
 rq = "^1.15.1"
 pydantic = "^2.0.2"
@@ -16,6 +16,7 @@ python-multipart = "^0.0.6"
 pandas = "^2.0.3"
 requests = "^2.31.0"
 pydantic-settings = "^2.0.3"
+streamlit = "^1.26.0"
 
 
 [tool.poetry.group.api]
