Finish v0 of html generator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,8 @@ gen-report = "tests.report:report"
 [tool.poe.tasks]
 _test = "pytest --json-report --json-report-file=tests/output/tests.json"
 _report = "gen-report"
-report = ["_test", "_report"]
+_html = "python3 tests/create_table.py"
+report = ["_test", "_report", "_html"]
 
 [tool.pytest.ini_options]
 markers = ["resource"]
