--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "lib"}, {include = "worker"}, {include = "api"}, {include = "tests"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 redis = "^4.6.0"
 rq = "^1.15.1"
 pydantic = "^2.0.2"
@@ -16,6 +16,7 @@ python-multipart = "^0.0.6"
 pandas = "^2.0.3"
 requests = "^2.31.0"
 pydantic-settings = "^2.0.3"
+streamlit = "^1.26.0"
 
 
 [tool.poetry.group.api]
@@ -37,9 +38,20 @@ poethepoet = "^0.22.0"
 requests-mock = "^1.11.0"
 pyyaml = "^6.0.1"
 pre-commit = "^3.3.3"
+pytest-json-report = "^1.5.0"
+
+
+[tool.poetry.scripts]
+gen-report = "tests.report:report"
+
+[tool.poe.tasks]
+_test = "pytest --json-report --json-report-file=tests/output/tests.json"
+_report = "gen-report"
+report = ["_test", "_report"]
 
 [tool.pytest.ini_options]
 markers = ["resource"]
+python_files = ["tests/test_e2e.py"]
 
 [build-system]
 requires = ["poetry-core"]
