--- a/env.sample
+++ b/env.sample
@@ -6,4 +6,5 @@ TA1_UNIFIED_URL=http://skema-unified.staging.terarium.ai
 MIT_TR_URL=http://mit-tr.staging.terarium.ai
 LOG_LEVEL=INFO
 MOCK_TA1=True
+MOCK_TDSt=True
 OPENAI_API_KEY=foo
