--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,17 +21,11 @@ fastapi = "^0.100.0"
 pypdf = "^3.12.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-httpx = "^0.24.1"
-fakeredis = "^2.18.0"
-pytest-cov = "^4.1.0"
-jsonschema = "^4.19.0"
+service-test-tools = {git = "https://github.com/jataware/service-test-tools"}
 yamllint = "^1.32.0"
 poethepoet = "^0.22.0"
-requests-mock = "^1.11.0"
 pyyaml = "^6.0.1"
 pre-commit = "^3.3.3"
-pytest-json-report = "^1.5.0"
 
 
 [tool.poetry.scripts]
