--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,9 @@ gen-report = "tests.report:report"
 [tool.poe.tasks]
 _test = "pytest --json-report --json-report-file=tests/output/tests.json"
 _report = "gen-report"
-report = ["_test", "_report"]
+report.sequence = ["_test", "_report"]
+report.ignore_fail = true
+
 
 [tool.pytest.ini_options]
 markers = ["resource"]
