--- a/env.sample
+++ b/env.sample
@@ -4,7 +4,9 @@ TDS_URL=http://data-service.staging.terarium.ai
 SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
 TA1_UNIFIED_URL=http://skema-unified.staging.terarium.ai
 MIT_TR_URL=http://mit-tr.staging.terarium.ai
+COSMOS_URL=http://xdd.wisc.edu/cosmos_service
 LOG_LEVEL=INFO
 MOCK_TA1=True
 MOCK_TDSt=True
 OPENAI_API_KEY=foo
+PDF_EXTRACTOR=cosmos
