--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pydantic-settings = "^2.0.3"
 uvicorn = "^0.22.0"
 fastapi = "^0.100.0"
 pypdf = "^3.12.0"
+boto3 = "^1.28.44"
 
 [tool.poetry.group.dev.dependencies]
 service-test-tools = {git = "https://github.com/jataware/service-test-tools"}
@@ -35,7 +36,9 @@ gen-report = "tests.report:report"
 [tool.poe.tasks]
 _test = "status-test"
 _report = "gen-report"
-report = ["_test", "_report"]
+report.sequence = ["_test", "_report"]
+report.ignore_fail = true
+
 
 [tool.pytest.ini_options]
 markers = ["resource"]
