--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -1,10 +1,8 @@
 ---
 name: Report
 on:
-  workflow_dispatch: null
-  push:
-    branches:
-      - main
+  schedule:
+    cron: "0 1 * * 1"
 jobs:
   test:
     runs-on: ubuntu-latest
