--- a/env.sample
+++ b/env.sample
@@ -8,3 +8,6 @@ LOG_LEVEL=INFO
 MOCK_TA1=True
 MOCK_TDSt=True
 OPENAI_API_KEY=foo
+AWS_PROD_ACCESS_KEY_ID=NA
+AWS_PROD_SECRET_ACCESS_KEY=NA
+AWS_PROD_BUCKET=NA
