--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,36 +16,25 @@ python-multipart = "^0.0.6"
 pandas = "^2.0.3"
 requests = "^2.31.0"
 pydantic-settings = "^2.0.3"
-streamlit = "^1.26.0"
-
-
-[tool.poetry.group.api]
-optional = true
-
-[tool.poetry.group.api.dependencies]
 uvicorn = "^0.22.0"
 fastapi = "^0.100.0"
 pypdf = "^3.12.0"
+boto3 = "^1.28.44"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-httpx = "^0.24.1"
-fakeredis = "^2.18.0"
-pytest-cov = "^4.1.0"
-jsonschema = "^4.19.0"
+service-test-tools = {git = "https://github.com/jataware/service-test-tools"}
 yamllint = "^1.32.0"
 poethepoet = "^0.22.0"
-requests-mock = "^1.11.0"
 pyyaml = "^6.0.1"
 pre-commit = "^3.3.3"
-pytest-json-report = "^1.5.0"
 
 
 [tool.poetry.scripts]
+status-test = "tests.report:test"
 gen-report = "tests.report:report"
 
 [tool.poe.tasks]
-_test = "pytest --json-report --json-report-file=tests/output/tests.json"
+_test = "status-test"
 _report = "gen-report"
 report.sequence = ["_test", "_report"]
 report.ignore_fail = true
