--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    secrets: inherit
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
