--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -10,7 +10,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    secrets: inherit
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
@@ -28,5 +27,9 @@ jobs:
         run: |
           poetry install
       - name: Run report
+        env:
+          AWS_ACCESS_KEY_ID: ${{secrets.AWS_PROD_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_PROD_SECRET_ACCESS_KEY}}
+          BUCKET: ${{secrets.AWS_PROD_BUCKET}}
         run: >
           MOCK_TA1=TRUE poetry run poe report 
