--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -32,5 +32,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_PROD_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_PROD_SECRET_ACCESS_KEY}}
           BUCKET: ${{secrets.AWS_PROD_BUCKET}}
+          SKEMA_RS_URL: ${{vars.SKEMA_RS_URL}}
+          TA1_UNIFIED_URL: ${{vars.TA1_UNIFIED_URL}}
+          MIT_TR_URL: ${{vars.MIT_TR_URL}}
+          MOCK_TA1: ${{vars.MOCK_TA1}}
         run: >
           poetry run poe report 
