--- a/env.sample
+++ b/env.sample
@@ -7,7 +7,7 @@ MIT_TR_URL=http://mit-tr.staging.terarium.ai
 COSMOS_URL=http://xdd.wisc.edu/cosmos_service
 LOG_LEVEL=INFO
 MOCK_TA1=True
-MOCK_TDSt=True
+MOCK_TDS=True
 OPENAI_API_KEY=foo
 PDF_EXTRACTOR=cosmos
 AWS_PROD_ACCESS_KEY_ID=NA
