--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -1,12 +1,6 @@
 ---
 name: Report
-on:
-  schedule:
-    - cron: "0 1 * * 1"
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+on: workflow_dispatch
 jobs:
   test:
     runs-on: ubuntu-latest
