--- a/model_dataset_linking/requirements.txt
+++ b/model_dataset_linking/requirements.txt
@@ -4,3 +4,4 @@ beautifulsoup4==4.11.1
 requests==2.31.0
 pandas==2.1.0
 -e git+https://github.com/gyorilab/mira.git@987d6a14946c08093dc124238ee304fe56475f2b#egg=mira
+openai
