--- a/tests/scenarios/12_month_eval_scenario_3/config.yaml
+++ b/tests/scenarios/12_month_eval_scenario_3/config.yaml
@@ -2,5 +2,5 @@
 name: "12 Month Eval Scenario #3"
 description: "12 month evaluation scenario 3: SEIRV Model"
 enabled:
-  - pdf_to_text
+  - pdf_to_cosmos
   - code_to_amr
