--- a/tests/scenarios/sidarthe/config.yaml
+++ b/tests/scenarios/sidarthe/config.yaml
@@ -3,5 +3,5 @@ name: "SIDARTHE"
 description: "Scenario to process SIDARTHE paper and code"
 enabled:
   - pdf_extraction
-  - pdf_to_text
+  - pdf_to_cosmos
   - code_to_amr
