Zip payload now seemingly correctly hitting TA1 services, modified some further files for consistency.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,6 +66,8 @@ services:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
       service: skema-unified
+    networks:
+      - knowledge-middleware
   skema-rs:
     extends:
       file: ./askem-ta1-dockervm/end-to-end-rest/docker-compose.yml
