--- a/tests/resources.yaml
+++ b/tests/resources.yaml
@@ -16,7 +16,8 @@ profile_model:
   - text.json
   - paper.pdf
   - code.py
-  - ground_truth_model_card.json
+  - optional:
+    - ground_truth_model_card.json
 link_amr:
   - paper.pdf
   - extractions.json
