Assess 'Accuracy' of model cards (#69)
Co-authored-by: Brandon Rose <rose.brandon.m@gmail.com>

--- a/tests/resources.yaml
+++ b/tests/resources.yaml
@@ -16,7 +16,8 @@ profile_model:
   - text.json
   - paper.pdf
   - code.py
-  - amr.json
+  - optional:
+    - ground_truth_model_card.json
 link_amr:
   - paper.pdf
   - extractions.json
