--- a/tests/scenarios/sidarthe/config.yaml
+++ b/tests/scenarios/sidarthe/config.yaml
@@ -3,6 +3,7 @@ name: "SIDARTHE"
 description: "Scenario to process SIDARTHE paper and code"
 enabled:
   - pdf_extraction
+  - profile_model
   - pdf_to_cosmos
   - code_to_amr
   - equations_to_amr  
