--- a/reporting/docker-compose.yaml
+++ b/reporting/docker-compose.yaml
@@ -1,4 +1,3 @@
-
 ---
 # simulation integration docker compose adapted from https://github.com/DARPA-ASKEM/simulation-integration/blob/a26b146554686268db56bb51b5ccdd66e872b8fd/docker-compose.yaml
 
@@ -45,7 +44,7 @@ services:
       - 9000
       - 9001
     entrypoint: ""
-    command: ["minio", "server", "/data"]
+    command: [ "minio", "server", "/data" ]
     ports:
       - 9000
     depends_on:
@@ -74,7 +73,7 @@ services:
       - POSTGRES_USER=dev
       - POSTGRES_DB=askem
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dev -d askem"]
+      test: [ "CMD-SHELL", "pg_isready -U dev -d askem" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -94,7 +93,7 @@ services:
       retries: 5
   data-service-migrations:
     image: ghcr.io/darpa-askem/data-service:latest
-    command: ['/api/migrations/run_migrations.sh']
+    command: [ '/api/migrations/run_migrations.sh' ]
     environment:
       - DATASET_STORAGE_BASE_URL=s3://datasets/
       - STORAGE_HOST=http://minio:9000
@@ -135,7 +134,7 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - TDS_URL=http://data-service:8000
-      - MIT_TR_URL 
+      - MIT_TR_URL
       - SKEMA_RS_URL
       - TA1_UNIFIED_URL
       - OPENAI_API_KEY
@@ -160,11 +159,13 @@ services:
       - SKEMA_RS_URL
       - TA1_UNIFIED_URL
       - COSMOS_URL
-      - MIT_TR_URL 
+      - MIT_TR_URL
       - OPENAI_API_KEY
     ports:
       - 8080
     depends_on:
+      redis:
+        condition: service_started
       knowledge-middleware-api:
         condition: service_started
   tests:
@@ -179,7 +180,7 @@ services:
       - SKEMA_RS_URL
       - TA1_UNIFIED_URL
       - COSMOS_URL
-      - MIT_TR_URL 
+      - MIT_TR_URL
       - OPENAI_API_KEY
     depends_on:
       knowledge-middleware-api:
