--- a/reporting/env.sample
+++ b/reporting/env.sample
@@ -1,9 +1,16 @@
-SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
 TA1_UNIFIED_URL=https://api.askem.lum.ai
+#TA1_UNIFIED_URL=http://skema-unified.staging.terarium.ai
+SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
 COSMOS_URL=
-MIT_TR_URL=
+MIT_TR_URL=http://mit-tr.staging.terarium.ai
+# TDS_URL=http://data-service.staging.terarium.ai
+TDS_URL=http://data-service-api:8000
 OPENAI_API_KEY=
 UPLOAD=FALSE
 BUCKET=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+REDIS_HOST=redis
+REDIS_PORT=6379
+LOG_LEVEL=INFO
+MOCK_TA1=True
