Added report upload call to the end of the main function.

--- a/reporting/docker-compose.yaml
+++ b/reporting/docker-compose.yaml
@@ -175,13 +175,13 @@ services:
       dockerfile: tests/Dockerfile
     environment:
       - UPLOAD=FALSE
-      - BUCKET
+      - BUCKET=jataware-sim-service-test
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
-      - SKEMA_RS_URL
+      - SKEMA_RS_URL=http://skema-rs:4040
       - TA1_UNIFIED_URL=https://api.askem.lum.ai
-      - COSMOS_URL
-      - MIT_TR_URL
+      - COSMOS_URL=http://xdd.wisc.edu/cosmos_service
+      - MIT_TR_URL=http://mit-tr:4046
       - OPENAI_API_KEY
     depends_on:
       knowledge-middleware-api:
