--- a/reporting/env.sample
+++ b/reporting/env.sample
@@ -1,7 +1,7 @@
 TA1_UNIFIED_URL=https://api.askem.lum.ai
 #TA1_UNIFIED_URL=http://skema-unified.staging.terarium.ai
 SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
-COSMOS_URL=
+COSMOS_URL=http://xdd.wisc.edu/cosmos_service
 MIT_TR_URL=http://mit-tr.staging.terarium.ai
 # TDS_URL=http://data-service.staging.terarium.ai
 TDS_URL=http://data-service-api:8000
@@ -10,7 +10,3 @@ UPLOAD=FALSE
 BUCKET=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-REDIS_HOST=redis
-REDIS_PORT=6379
-LOG_LEVEL=INFO
-MOCK_TA1=True
