--- a/reporting/env.sample
+++ b/reporting/env.sample
@@ -1,7 +1,10 @@
-SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
 TA1_UNIFIED_URL=https://api.askem.lum.ai
-COSMOS_URL=
-MIT_TR_URL=
+#TA1_UNIFIED_URL=http://skema-unified.staging.terarium.ai
+SKEMA_RS_URL=http://skema-rs.staging.terarium.ai
+COSMOS_URL=http://xdd.wisc.edu/cosmos_service
+MIT_TR_URL=http://mit-tr.staging.terarium.ai
+# TDS_URL=http://data-service.staging.terarium.ai
+TDS_URL=http://data-service-api:8000
 OPENAI_API_KEY=
 UPLOAD=FALSE
 BUCKET=
