--- a/tests/scenarios/basic/config.yaml
+++ b/tests/scenarios/basic/config.yaml
@@ -2,8 +2,8 @@
 name: "Basic Integration"
 description: "A basic scenario for testing core integration."
 enabled:
+  - variable_extraction
   - pdf_extraction
-  - pdf_to_cosmos
   - code_to_amr
   - equations_to_amr
   - profile_dataset
