--- a/tests/scenarios/sidarthe/config.yaml
+++ b/tests/scenarios/sidarthe/config.yaml
@@ -2,7 +2,7 @@
 name: "SIDARTHE"
 description: "Scenario to process SIDARTHE paper and code"
 enabled:
-  - variable_extraction
+  - variable_extractions
   - profile_model
   - pdf_extraction
   - code_to_amr
