Finish up refactor

--- a/reporting/tests/Dockerfile
+++ b/reporting/tests/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10
 
-WORKDIR /simulation-integration
+WORKDIR /km-reporting
 COPY tests/requirements.txt ./
 RUN pip install -r requirements.txt
 
